--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-typed": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
